# Deltaline

./: .gitignore  .travis.yml  Dockerfile  Gemfile  Pipfile  README.md  contributing.md  deployment.sh  dockerfile  eula.md  hub.html  package-lock.json  package.json  pyproject.toml  rakefile  requirements.txt  style.css
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: codeql-analysis.yml  django.yml  docker.yml  format-python.yml  jekyll.yml  snyk.yml
.husky/: pre-commit
Community/: Art Assets.md  CODE_OF_CONDUCT.md  contributing.md  eula.md
Deltaline/: manage.py
Deltaline-API/: main.py
Deltaline-Flask/: index.py
Deltaline-Flask/templates/: index.html
Deltaline-Sanic/: main.py
Deltaline-Sanic/Deltaline-React/: package-lock.json  package.json
Deltaline/Deltaline/: asgi.py  settings.py  urls.py  wsgi.py
DeltalineDjango/: manage.py
DeltalineDjango/DeltalineDjango/: asgi.py  settings.py  urls.py  wsgi.py
DeltalineDjango/app/: admin.py  models.py  url.py  urls.py  views.py
Django/Deltaline/: settings.py  urls.py
Django/src/: views.py
dockersite/: about.html  index.html  japanese-2.html  japanese.html
dockersite/css/: japanese2.css  style.css
nextjs-deltaline/: .prettierignore  package-lock.json  package.json
nextjs-deltaline/pages/: _app.tsx  _document.tsx  index.tsx
nextjs-deltaline/styles/: globals.css
site/: about.html  index.html  japanese-2.html  japanese.html
site/css/: about.css  body.css  bootstrap.sass  (+3 more)
tos/: eula.md
(+28 files in other folders)
