[tool.poetry]
name = "Deltaline"
version = "0.1.0"
description = "A Open-Source Digital Portfolio for Classwork"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
orjson = "^3.6.8"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.35"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
